--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.8.1",
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1"
   },
