--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.8",
     "aos": "^2.3.4",
+    "caniuse-lite": "^1.0.30001572",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
-    "react-scroll": "^1.8.9",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "react-vertical-timeline-component": "^3.6.0",
