--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
     "aos": "^2.3.4",
+    "axios": "^1.6.7",
     "caniuse-lite": "^1.0.30001572",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
